Update doc for 2.4.0